添加了自己的联系方式

--- a/index.html
+++ b/index.html
@@ -71,13 +71,38 @@
 			<div class="social">
 				<h2>Stay Connected</h2>
 				<ul>
-					<li><a href=""><i class="fa fa-weixin fa-2x"></i></a></li>
-					<li><a href=""><i class="fa fa-twitter-square fa-3x"></i></a></li>
-					<li><a href=""><i class="fa fa-tumblr-square fa-3x"></i></a></li>
+					<li><a  href="" data-toggle="modal" data-target=".weixin-modal"><i class="fa fa-weixin fa-3x"></i></a></li>
+					<li><a href="http://weibo.com/aaronwilson" target="_blank"><i class="fa fa-weibo fa-3x"></i></a></li>
+					<li><a href=""><i class="fa fa-qq fa-3x"></i></a></li>
 					<li><a href=""><i class="fa fa-google-plus-square fa-3x"></i></a></li>
 				</ul>
 			</div>
 		</div><!-- #drawer-right -->
+
+		<!--modal weixin -->
+
+		<div class="modal fade weixin-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+			<div class="modal-dialog" role="document">
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+						<h4 class="modal-title" id="myModalLabel">Weixin Me</h4>
+					</div>
+					<div class="modal-body text-center">
+
+
+						<img src="assets/images/WeChatImage635779939810227491.jpg">
+
+					</div>
+					<div class="modal-footer">
+						<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<!--modal /weixin -->
 
 		<div id="wrapper">
 			
@@ -109,41 +134,41 @@
 				<div class="container">
 					<header class="block-heading cleafix">
 						<a href="#" class="btn btn-o btn-lg pull-right">View All</a>
-						<h1>Our Latest Works</h1>
-						<p>Take a look at some of our recent products</p>
+						<h1>My Latest Works</h1>
+						<p>Take a look at some of my recent works</p>
 					</header>
 					<section class="block-body">
 						<div class="row">
 							<div class="col-sm-4">
-								<a href="#" class="recent-work" style="background-image:url(assets/images/rain_1-320x240.jpg)">
-									<span class="btn btn-o-white">Lorem Rocks</span>
+								<a href="http://www.wzzzzzz.com" target="_blank" class="recent-work" style="background-image:url(assets/images/wzzzzzz_2_320_240.jpg)">
+									<span class="btn btn-o-white">Click Bingo</span>
 								</a>
 							</div>
 							<div class="col-sm-4">
-								<a href="#" class="recent-work" style="background-image:url(assets/images/min_icons_thumb1-320x240.jpg)">
-									<span class="btn btn-o-white">Lorem Rocks</span>
+								<a href="http://jinweizhen.github.io/Auctoritas" target="_blank" class="recent-work" style="background-image:url(assets/images/Auctoritas_320_240.jpg)">
+									<span class="btn btn-o-white">Click Bingo</span>
 								</a>
 							</div>
 							<div class="col-sm-4">
-								<a href="#" class="recent-work" style="background-image:url(assets/images/flat_icons_thumb.jpg)">
-									<span class="btn btn-o-white">Lorem Rocks</span>
+								<a href="http://jinweizhen.github.io/MadeToStick/" target="_blank" class="recent-work" style="background-image:url(assets/images/MadeToStick_320_240.jpg)">
+									<span class="btn btn-o-white">Click Bingo</span>
 								</a>
 							</div>
 						</div>
 						<div class="row">
 							<div class="col-sm-4">
-								<a href="#" class="recent-work" style="background-image:url(assets/images/wood-320x240.jpg)">
-									<span class="btn btn-o-white">Lorem Rocks</span>
+								<a href="http://jinweizhen.github.io/StartFromWhenWeMeet/" target="_blank" class="recent-work" style="background-image:url(assets/images/StartFrom_320_240.jpg)">
+									<span class="btn btn-o-white">Click Bingo</span>
 								</a>
 							</div>
 							<div class="col-sm-4">
-								<a href="#" class="recent-work" style="background-image:url(assets/images/bike-320x240.jpg)">
-									<span class="btn btn-o-white">Lorem Rocks</span>
+								<a href="http://jinweizhen.github.io/fengtang10" target="_blank" class="recent-work" style="background-image:url(assets/images/Fengtan10_320_240.jpg)">
+									<span class="btn btn-o-white">Click Bingo</span>
 								</a>
 							</div>
 							<div class="col-sm-4">
-								<a href="#" class="recent-work" style="background-image:url(assets/images/six_1-320x240.jpg)">
-									<span class="btn btn-o-white">Lorem Rocks</span>
+								<a href="http://jinweizhen.github.io/HILeon" target="_blank" class="recent-work" style="background-image:url(assets/images/leon_320_240.jpg)">
+									<span class="btn btn-o-white">Click Bingo</span>
 								</a>
 							</div>
 						</div>
@@ -197,24 +222,24 @@
 						<div class="row">
 							<div class="col-sm-4 blog-post">
 								<img src="assets/images/bike_water1-1000x600.jpg">
-								<a href="#"><h2>Design Your Mind</h2></a>
+								<a href="http://blog.sina.com.cn/aaronwilson"><h2>Design Your Mind</h2></a>
 								<div class="date">3 Nov, 2014</div>
 								<p>In at accumsan risus. Nam id volutpat ante. Etiam vel mi mattis, vulputate nunc nec, sodales nibh. Etiam nulla magna, gravida eget ultricies sit amet, hendrerit in lorem.</p>
-								<a href="">Read More</a>
+								<a href="http://blog.sina.com.cn/aaronwilson">Read More</a>
 							</div>
 							<div class="col-sm-4 blog-post">
 								<img src="assets/images/mac_glasses1-1000x600.jpg">
-								<a href="#"><h2>Winter Is Comming</h2></a>
+								<a href="http://blog.sina.com.cn/aaronwilson"><h2>Winter Is Comming</h2></a>
 								<div class="date">3 Nov, 2014</div>
 								<p>In at accumsan risus. Nam id volutpat ante. Etiam vel mi mattis, vulputate nunc nec, sodales nibh. Etiam nulla magna, gravida eget ultricies sit amet, hendrerit in lorem.</p>
-								<a href="">Read More</a>
+								<a href="http://blog.sina.com.cn/aaronwilson">Read More</a>
 							</div>
 							<div class="col-sm-4 blog-post">
 								<img src="assets/images/road-1000x600.jpg">
-								<a href="#"><h2>The Illustration</h2></a>
+								<a href="http://blog.sina.com.cn/aaronwilson"><h2>The Illustration</h2></a>
 								<div class="date">3 Nov, 2014</div>
 								<p>In at accumsan risus. Nam id volutpat ante. Etiam vel mi mattis, vulputate nunc nec, sodales nibh. Etiam nulla magna, gravida eget ultricies sit amet, hendrerit in lorem.</p>
-								<a href="">Read More</a>
+								<a href="http://blog.sina.com.cn/aaronwilson">Read More</a>
 							</div>
 						</div>
 					</section>
@@ -224,7 +249,7 @@
 
 			<div class="content-block parallax" id="parallax">
 				<div class="container text-center">
-					<h1>In at accumsan risus. Nam id volutpat ante. Etiam vel mi mattis, vulputate nunc nec, sodales nibh. Etiam nulla magna, gravida eget ultricies sit amet, hendrerit.</h1>
+					<h1>“人类是未完成的动物。”这句话的意思是，只有人性具有这种性质，就是它是人们所生活的这个社会的产物。也就是说，我们的人性是我们自己创造的，而不是我们发现它就是那样。我们设计了人性，通过设计制度，让人们生活和工作在其中。</h1>
 					<a href="" class="btn btn-o-white btn-lg">Get a free quote</a>
 				</div>
 			</div><!-- #parallax -->
@@ -276,17 +301,10 @@
 					<section class="block-body">
 						<div class="row">
 							<div class="col-md-6 col-md-offset-3">
-								<form class="" role="form">
-									<div class="form-group">
-								    	<input type="email" class="form-control form-control-white" id="subject" placeholder="Your Name" required>
-								  	</div>
-								    <div class="form-group">
-								    	<input type="email" class="form-control form-control-white" id="exampleInputEmail2" placeholder="Enter email" required>
-								    </div>
-								    <div class="form-group">
-								    	<textarea class="form-control form-control-white" placeholder="Write Something" required></textarea>
-								    </div>
-								  <input type="submit" class="btn btn-o-white" value="Say Hello">
+								<form class="" role="form" method="post" action="mailto:juz1989@qq.com">
+									<div style="padding-bottom: 1em"><img src="assets/images/金威震名片二维码.png"></div>
+									<p>OR</p>
+								  <input type="submit" class="btn btn-o-white" value="Say Hello By E-mail">
 								</form>
 							</div>
 						</div>
@@ -312,6 +330,7 @@
 		<script src="assets/js/jquery-2.1.3.min.js"></script>
 		<script src="assets/js/jquery-migrate-1.2.1.min.js"></script>
 		<script src="assets/js/bootstrap.min.js"></script>
+		<script src='http://cdn.bootcss.com/bootstrap/3.2.0/js/bootstrap.min.js'></script>
 		<script src="assets/js/jquery.actual.min.js"></script>
 		<script src="assets/js/jquery.scrollTo.min.js"></script>
 		<script src="assets/js/script.js"></script>
