--- a/index.html
+++ b/index.html
@@ -52,16 +52,16 @@
 						<a href="#portfolio"><i class="fa fa-bookmark"></i> Portfolio</a>
 					</li>
 					<li>
-						<a href="#services"><i class="fa fa-tasks"></i> Services</a>
+						<a href="#services"><i class="fa fa-tasks"></i> Favourite</a>
 					</li>
 					<li>
 						<a href="#blog"><i class="fa fa-wordpress"></i> Blog</a>
 					</li>
 					<li>
-						<a href="#parallax"><i class="fa fa-heart"></i> Parallax</a>
+						<a href="#parallax"><i class="fa fa-heart"></i> Heyman</a>
 					</li>
 					<li>
-						<a href="#testimonials"><i class="fa fa-thumbs-up"></i> Testimonials</a>
+						<a href="#testimonials"><i class="fa fa-thumbs-up"></i> Peoplesay</a>
 					</li>
 					<li>
 						<a href="#contact"><i class="fa fa-phone-square"></i> Contact</a>
@@ -73,8 +73,8 @@
 				<ul>
 					<li><a  href="" data-toggle="modal" data-target=".weixin-modal"><i class="fa fa-weixin fa-3x"></i></a></li>
 					<li><a href="http://weibo.com/aaronwilson" target="_blank"><i class="fa fa-weibo fa-3x"></i></a></li>
-					<li><a href=""><i class="fa fa-qq fa-3x"></i></a></li>
-					<li><a href=""><i class="fa fa-google-plus-square fa-3x"></i></a></li>
+					<li><a href="" data-toggle="modal" data-target=".qq-modal"><i class="fa fa-qq fa-3x"></i></a></li>
+					<li><a href="" data-toggle="modal" data-target=".google-modal"><i class="fa fa-google-plus-square fa-3x"></i></a></li>
 				</ul>
 			</div>
 		</div><!-- #drawer-right -->
@@ -103,6 +103,54 @@
 		</div>
 
 		<!--modal /weixin -->
+
+		<!--modal qq -->
+
+		<div class="modal fade qq-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+			<div class="modal-dialog" role="document">
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+						<h4 class="modal-title" id="myModalLabel">QQ Me</h4>
+					</div>
+					<div class="modal-body text-center">
+
+
+						<h3>你想多了</h3>
+					</div>
+					<div class="modal-footer">
+						<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<!--modal /qq -->
+
+		<!--modal google＋ -->
+
+		<div class="modal fade google-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+			<div class="modal-dialog" role="document">
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+						<h4 class="modal-title" id="myModalLabel">Google Me</h4>
+					</div>
+					<div class="modal-body text-center">
+
+
+						<h3>你还是想多了</h3>
+					</div>
+					<div class="modal-footer">
+						<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<!--modal /google＋ -->
 
 		<div id="wrapper">
 			
@@ -179,30 +227,30 @@
 			<div class="content-block parallax" id="services">
 				<div class="container text-center">
 					<header class="block-heading cleafix">
-						<h1>Our Services</h1>
-						<p>A little about what we do</p>
+						<h1>My Favourite</h1>
+						<p>A little about what I do</p>
 					</header>
 					<section class="block-body">
 						<div class="row">
 							<div class="col-md-4">
 								<div class="service">
 									<i class="fa fa-send-o"></i>
-									<h2>Illustration</h2>
-									<p>In at accumsan risus. Nam id volutpat ante. Etiam vel mi mattis, vulputate nunc nec, sodales nibh. Etiam nulla magna, gravida eget ultricies sit amet, hendrerit in lorem.</p>
+									<h2>理想</h2>
+									<p>没有什么能够阻挡，你对自由的向往.</p>
 								</div>
 							</div>
 							<div class="col-md-4">
 								<div class="service">
 									<i class="fa fa-heart-o"></i>
-									<h2>3D Modeling</h2>
-									<p>In at accumsan risus. Nam id volutpat ante. Etiam vel mi mattis, vulputate nunc nec, sodales nibh. Etiam nulla magna, gravida eget ultricies sit amet, hendrerit in lorem.</p>
+									<h2>舒心</h2>
+									<p>我们栖居 大地 建筑 抒情</p>
 								</div>
 							</div>
 							<div class="col-md-4">
 								<div class="service">
 									<i class="fa fa-camera-retro"></i>
-									<h2>Photography</h2>
-									<p>In at accumsan risus. Nam id volutpat ante. Etiam vel mi mattis, vulputate nunc nec, sodales nibh. Etiam nulla magna, gravida eget ultricies sit amet, hendrerit in lorem.</p>
+									<h2>幸福</h2>
+									<p>良辰 美景 赏心 乐事</p>
 								</div>
 							</div>
 						</div>
@@ -222,24 +270,24 @@
 						<div class="row">
 							<div class="col-sm-4 blog-post">
 								<img src="assets/images/bike_water1-1000x600.jpg">
-								<a href="http://blog.sina.com.cn/aaronwilson"><h2>Design Your Mind</h2></a>
+								<a href="http://blog.sina.com.cn/aaronwilson" target="_blank"><h2>Design Your Mind</h2></a>
 								<div class="date">3 Nov, 2014</div>
 								<p>In at accumsan risus. Nam id volutpat ante. Etiam vel mi mattis, vulputate nunc nec, sodales nibh. Etiam nulla magna, gravida eget ultricies sit amet, hendrerit in lorem.</p>
-								<a href="http://blog.sina.com.cn/aaronwilson">Read More</a>
+								<a href="http://blog.sina.com.cn/aaronwilson" target="_blank">Read More</a>
 							</div>
 							<div class="col-sm-4 blog-post">
 								<img src="assets/images/mac_glasses1-1000x600.jpg">
-								<a href="http://blog.sina.com.cn/aaronwilson"><h2>Winter Is Comming</h2></a>
+								<a href="http://blog.sina.com.cn/aaronwilson" target="_blank"><h2>Winter Is Comming</h2></a>
 								<div class="date">3 Nov, 2014</div>
 								<p>In at accumsan risus. Nam id volutpat ante. Etiam vel mi mattis, vulputate nunc nec, sodales nibh. Etiam nulla magna, gravida eget ultricies sit amet, hendrerit in lorem.</p>
-								<a href="http://blog.sina.com.cn/aaronwilson">Read More</a>
+								<a href="http://blog.sina.com.cn/aaronwilson " target="_blank">Read More</a>
 							</div>
 							<div class="col-sm-4 blog-post">
 								<img src="assets/images/road-1000x600.jpg">
-								<a href="http://blog.sina.com.cn/aaronwilson"><h2>The Illustration</h2></a>
+								<a href="http://blog.sina.com.cn/aaronwilson" target="_blank"><h2>The Illustration</h2></a>
 								<div class="date">3 Nov, 2014</div>
 								<p>In at accumsan risus. Nam id volutpat ante. Etiam vel mi mattis, vulputate nunc nec, sodales nibh. Etiam nulla magna, gravida eget ultricies sit amet, hendrerit in lorem.</p>
-								<a href="http://blog.sina.com.cn/aaronwilson">Read More</a>
+								<a href="http://blog.sina.com.cn/aaronwilson" target="_blank">Read More</a>
 							</div>
 						</div>
 					</section>
@@ -250,39 +298,40 @@
 			<div class="content-block parallax" id="parallax">
 				<div class="container text-center">
 					<h1>“人类是未完成的动物。”这句话的意思是，只有人性具有这种性质，就是它是人们所生活的这个社会的产物。也就是说，我们的人性是我们自己创造的，而不是我们发现它就是那样。我们设计了人性，通过设计制度，让人们生活和工作在其中。</h1>
-					<a href="" class="btn btn-o-white btn-lg">Get a free quote</a>
+					<a href="http://weibo.com/victoriaaps" target="_blank" class="btn btn-o-white btn-lg">Get a free quote</a>
 				</div>
 			</div><!-- #parallax -->
 
 			<div class="content-block" id="testimonials">
 				<div class="container">
 					<header class="block-heading cleafix">
-						<h1>Testimonials</h1>
-						<p>Some happy customers have to say.</p>
+						<h1>People Say</h1>
+						<p>Some happy people have to say.</p>
 					</header>
 					<section class="block-body">
 						<div class="row">
 							<div class="col-md-4">
 								<div class="testimonial">
-									<img src="assets/images/testimonial_31-190x190.jpg">
-									<p>In at accumsan risus. Nam id volutpat ante. Etiam vel mi mattis, vulputate nunc nec, sodales nibh. Etiam nulla magna, gravida eget ultricies sit amet, hendrerit in lorem.</p>
-									<strong>Jhon Doe</strong><br/>
-									<span>Head of Ideas, Technext</span>
+									<img src="assets/images/08.jpeg">
+									<p>多一点知识会给你一些工具，让你观察企业发展趋势和理解数字背后的故事。
+										你可能不知道全部的答案，但至少懂得在不知道答案时去提出问题.</p>
+									<strong>赵钱</strong><br/>
+									<span>Head of Ideas, Techbody</span>
 								</div>
 							</div>
 							<div class="col-md-4">
 								<div class="testimonial">
-									<img src="assets/images/testimonial_11-190x190.jpg">
-									<p>In at accumsan risus. Nam id volutpat ante. Etiam vel mi mattis, vulputate nunc nec, sodales nibh. Etiam nulla magna, gravida eget ultricies sit amet, hendrerit in lorem.</p>
-									<strong>Jane Doe</strong><br/>
-									<span>CEO, Apple Inc</span>
+									<img src="assets/images/08.jpeg">
+									<p>这是一个最好的时代,这是一个最坏的时代,这是一个智慧的年代,这是一个愚蠢的年代,这是一个光明的季节,这是一个黑暗的季节,这是希望之春,这是失望之冬,人们面前应有尽有,人们面前一无所有.</p>
+									<strong>孙李</strong><br/>
+									<span>CEO, AppleOne Inc</span>
 								</div>
 							</div>
 							<div class="col-md-4">
 								<div class="testimonial">
-									<img src="assets/images/testimonial_22-190x190.jpg">
-									<p>In at accumsan risus. Nam id volutpat ante. Etiam vel mi mattis, vulputate nunc nec, sodales nibh. Etiam nulla magna, gravida eget ultricies sit amet, hendrerit in lorem.</p>
-									<strong>Albert Doe</strong><br/>
+									<img src="assets/images/08.jpeg">
+									<p>教外别传，不立文字。直指人心，见性成佛。</p>
+									<strong>熊二</strong><br/>
 									<span>Team Lead, Design Studio</span>
 								</div>
 							</div>
